--- a/frontend/src/components/MainScreen/Navbar.css
+++ b/frontend/src/components/MainScreen/Navbar.css
@@ -7,7 +7,6 @@
   width: 100%;
   height: 80px;
   background-color: #3c3c3c;
-  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -169,5 +168,6 @@ h2 {
 .brand {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding-top: 50px;
 }
