--- a/frontend/src/components/register/register.css
+++ b/frontend/src/components/register/register.css
@@ -1,55 +1,74 @@
+.main_reg {
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+.reg_container {
+  height: 90vh;
+  width: 70vh;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.reg_items {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 10vh 5vh 50vh 15vh 2vh 3vh;
+}
+.reg_items > div {
+  text-align: center;
+}
+.headReg {
+  padding: 5vh 0;
+  color: black;
+  font-size: 35px;
+}
+input {
+  margin-top: 5vh;
+}
 
-.reg_container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 50px;
+input[type="text"] {
+  font-size: 15px;
+  border-radius: 8px;
+  border: none;
+  padding: 15px;
+  width: 80%;
+  background-color: #f0f0f0;
 }
-.headReg{
-    color: black;
+input[type="email"] {
+  font-size: 15px;
+  border-radius: 8px;
+  border: none;
+  padding: 15px;
+  width: 80%;
+  background-color: #f0f0f0;
 }
-input[type=text]{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    font-size: 15px;
-    border-radius: 8px;
-    border: none;
-    padding: 15px;
-    width: 400px;
-    background-color: #f0f0f0;
+input[type="password"] {
+  font-size: 15px;
+  border-radius: 8px;
+  border: none;
+  padding: 15px;
+  width: 80%;
+  background-color: #f0f0f0;
 }
-input[type=email]{
-    margin-bottom: 30px;
-    font-size: 15px;
-    border-radius: 8px;
-    border: none;
-    padding: 15px;
-    width: 400px;
-    background-color: #f0f0f0;
+.reg_button {
+  font-size: 20px;
+  border: 2px solid;
+  border-radius: 8px;
+  background-color: #4caf50;
+  color: white;
+  width: 80%;
+  padding: 13px;
+  margin-top: 5vh;
+  cursor: pointer;
 }
-input[type=password]{
-    margin-bottom: 30px;
-    font-size: 15px;
-    border-radius: 8px;
-    border: none;
-    padding: 15px;
-    width: 400px;
-    background-color: #f0f0f0;
+.reg_login {
+  margin-top: 15px;
 }
-.button{
-    font-size: 20px;
-    border: 2px solid;
-    border-radius: 8px;
-    background-color: #4CAF50;
-    color: white;
-    width: 408px;
-    text-align: center;
-    padding: 10px;
-    cursor: pointer;
-
-}
-.button:hover{
-    background-color: #008400;
-    transition: 0.3s ease-in-out;
+.reg_button:hover {
+  background-color: #008700;
+  transition: 0.3s ease-in-out;
 }
